update swagger doc add service struct to async API responses for backup/restore
